added work section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="/assets/styles/style.css">
     <title>Document</title>
 </head>
+
 <body>
+
     <header>
         <div class="header-left">
             <h1>Colin Sprows</h1>
@@ -32,8 +35,8 @@
         </div>
     </header>
     
-    <section class="banner-image">
-        <img src="/assets/images/portfolio-image.jpeg" alt="Portfolio image under header">
+    <section class="hero">
+        <h2>Cool Subtitle!</h2>
     </section>
 
     <div class="about-me">
@@ -43,6 +46,44 @@
         <div class="about-me-text">
             <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi placeat ex doloribus nostrum quaerat corporis autem amet, itaque illo magni beatae. Expedita distinctio voluptas minima velit nesciunt fuga itaque.</h6>
             <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum praesentium a ut quae quis ipsa quaerat accusantium ea iste nesciunt labore blanditiis veritatis ducimus ipsum unde incidunt, cumque dolore porro!</h6>
+        </div>
+    </div>
+
+    <div class="work">
+        <div class="work-title">
+            <h1>Work</h1>
+        </div>
+        <div class="work-tiles">
+            <div class="main-tile">
+                <div id="tile-title">
+                    <h3>Surf Report</h3>
+                    <h6>MERN Stack</h6>
+                </div>
+            </div>
+            <div class="sub-tile">
+                <div id="tile-title">
+                    <h3>LED Wall</h3>
+                    <h6>Node/IoT</h6>
+                </div>
+            </div>
+            <div class="sub-tile">
+                <div id="tile-title">
+                    <h3>Calculator</h3>
+                    <h6>React/JavaScript/CSS</h6>
+                </div>
+            </div>
+            <div class="sub-tile">
+                <div id="tile-title">
+                    <h3>Pastel Puzzles</h3>
+                    <h6>Placeholder</h6>
+                </div>
+            </div>
+            <div class="sub-tile">
+                <div id="tile-title">
+                    <h3>Run Buddy</h3>
+                    <h6>Placeholder</h6>
+                </div>
+            </div>
         </div>
     </div>
     
