added contact me section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
             </div>
         </div>
     </div>
+
+    <div class="contact-me">
+        <div class="contact-me-title">
+            <h1>About Me</h1>
+        </div>
+        <div class="contact-me-text">
+            <ul>
+                <li>555.555.5555</li>
+                <li>colin.sprows@gmail.com</li>
+                <li>Github</li>
+                <li>Twitter</li>
+                <li>Spotify</li>
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
