fixed some margins and added images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#work">Work</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#contact-me">Contact</a>
                     </li>
                     <li>
                         <a href="#resume">Resume</a>
@@ -44,8 +44,9 @@
             <h1>About Me</h1>
         </div>
         <div class="about-me-text">
-            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi placeat ex doloribus nostrum quaerat corporis autem amet, itaque illo magni beatae. Expedita distinctio voluptas minima velit nesciunt fuga itaque.</h6>
-            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum praesentium a ut quae quis ipsa quaerat accusantium ea iste nesciunt labore blanditiis veritatis ducimus ipsum unde incidunt, cumque dolore porro!</h6>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quasi placeat ex doloribus nostrum quaerat corporis autem amet, itaque illo magni beatae. Expedita distinctio voluptas minima velit nesciunt fuga itaque.</h5>
+            <br>
+            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum praesentium a ut quae quis ipsa quaerat accusantium ea iste nesciunt labore blanditiis veritatis ducimus ipsum unde incidunt, cumque dolore porro!</h5>
         </div>
     </div>
 
@@ -89,7 +90,7 @@
 
     <div class="contact-me">
         <div class="contact-me-title">
-            <h1>About Me</h1>
+            <h1>Contact Me</h1>
         </div>
         <div class="contact-me-text">
             <ul>
