added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
                     <li>
                         <a href="#contact-me">Contact</a>
                     </li>
-                    <li>
-                        <a href="#resume">Resume</a>
-                    </li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +36,7 @@
         <h2>Cool Subtitle!</h2>
     </section>
 
-    <div class="about-me">
+    <div id="about-me">
         <div class="about-me-title">
             <h1>About Me</h1>
         </div>
@@ -50,51 +47,61 @@
         </div>
     </div>
 
-    <div class="work">
+    <div id="work">
         <div class="work-title">
             <h1>Work</h1>
         </div>
         <div class="work-tiles">
             <div class="main-tile">
-                <div id="tile-title">
-                    <h3>Surf Report</h3>
-                    <h6>MERN Stack</h6>
-                </div>
+                <a href="https://colinsprows.github.io/horiseon/">
+                    <div id="tile-title">
+                        <h3>Surf Report</h3>
+                        <h6>MERN Stack</h6>
+                    </div>
+                </a>
             </div>
             <div class="sub-tile">
-                <div id="tile-title">
-                    <h3>LED Wall</h3>
-                    <h6>Node/IoT</h6>
-                </div>
+                <a href="https://colinsprows.github.io/horiseon/">
+                    <div id="tile-title">
+                        <h3>LED Wall</h3>
+                        <h6>Node/IoT</h6>
+                    </div>
+                </a>
             </div>
             <div class="sub-tile">
-                <div id="tile-title">
-                    <h3>Calculator</h3>
-                    <h6>React/JavaScript/CSS</h6>
-                </div>
+                <a href="https://colinsprows.github.io/horiseon/">
+                    <div id="tile-title">
+                        <h3>Calculator</h3>
+                        <h6>React/JavaScript/CSS</h6>
+                    </div>
+                </a>
             </div>
             <div class="sub-tile">
-                <div id="tile-title">
-                    <h3>Pastel Puzzles</h3>
-                    <h6>Placeholder</h6>
-                </div>
+                <a href="https://colinsprows.github.io/horiseon/">
+                    <div id="tile-title">
+                        <h3>Pastel Puzzles</h3>
+                        <h6>Placeholder</h6>
+                    </div>
+                </a>
             </div>
             <div class="sub-tile">
-                <div id="tile-title">
-                    <h3>Run Buddy</h3>
-                    <h6>Placeholder</h6>
-                </div>
+                <a href="https://colinsprows.github.io/horiseon/">
+                    <div id="tile-title">
+                        <h3>Run Buddy</h3>
+                        <h6>Placeholder</h6>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
 
-    <div class="contact-me">
+    <div id="contact-me">
         <div class="contact-me-title">
             <h1>Contact Me</h1>
         </div>
         <div class="contact-me-text">
             <ul>
-                <li>555.555.5555</li>
+                <li>203.919.6098</li>
                 <li>colin.sprows@gmail.com</li>
                 <li>Github</li>
                 <li>Twitter</li>
