--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <header>
         <div class="header-left">
+            <img src="assets/images/CS.png" alt="" height="36px" width="24px">
             <h1>Colin Sprows</h1>
         </div>
         <div class="header-right">
