--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
             <ul>
                 <li>203.919.6098</li>
                 <li>colin.sprows@gmail.com</li>
-                <li>Github</li>
-                <li>Twitter</li>
-                <li>Spotify</li>
+                <li><a href="https://github.com/ColinSprows">Github</a></li>
             </ul>
         </div>
     </div>
