fixed links on tiles in work section

--- a/index.html
+++ b/index.html
@@ -53,46 +53,36 @@
             <h1>Work</h1>
         </div>
         <div class="work-tiles">
-            <div class="main-tile">
-                <a href="https://colinsprows.github.io/horiseon/">
-                    <div id="tile-title">
-                        <h3>Surf Report</h3>
-                        <h6>MERN Stack</h6>
-                    </div>
-                </a>
-            </div>
-            <div class="sub-tile">
-                <a href="https://colinsprows.github.io/horiseon/">
+            <a href="https://colinsprows.github.io/horiseon/" class="main-tile">
+                <div id="tile-title">
+                    <h3>Surf Report</h3>
+                    <h6>MERN Stack</h6>
+                </div>
+            </a>
+            <a href="https://colinsprows.github.io/horiseon/" class="sub-tile">
                     <div id="tile-title">
                         <h3>LED Wall</h3>
                         <h6>Node/IoT</h6>
                     </div>
-                </a>
-            </div>
-            <div class="sub-tile">
-                <a href="https://colinsprows.github.io/horiseon/">
-                    <div id="tile-title">
-                        <h3>Calculator</h3>
-                        <h6>React/JavaScript/CSS</h6>
-                    </div>
-                </a>
-            </div>
-            <div class="sub-tile">
-                <a href="https://colinsprows.github.io/horiseon/">
-                    <div id="tile-title">
-                        <h3>Pastel Puzzles</h3>
-                        <h6>Placeholder</h6>
-                    </div>
-                </a>
-            </div>
-            <div class="sub-tile">
-                <a href="https://colinsprows.github.io/horiseon/">
-                    <div id="tile-title">
-                        <h3>Run Buddy</h3>
-                        <h6>Placeholder</h6>
-                    </div>
-                </a>
-            </div>
+            </a>
+            <a href="https://colinsprows.github.io/horiseon/" class="sub-tile">
+                <div id="tile-title">
+                    <h3>Calculator</h3>
+                    <h6>React/JavaScript/CSS</h6>
+                </div>
+            </a>
+            <a href="https://colinsprows.github.io/horiseon/" class="sub-tile">
+                <div id="tile-title">
+                    <h3>Pastel Puzzles</h3>
+                    <h6>Placeholder</h6>
+                </div>
+            </a>
+            <a href="https://colinsprows.github.io/horiseon/" class="sub-tile">
+                <div id="tile-title">
+                    <h3>Run Buddy</h3>
+                    <h6>Placeholder</h6>
+                </div>
+            </a>
         </div>
     </div>
 
